Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-1882

[cpp] cannot send message properties with null values

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-c-0.23.0
    • proton-c-0.25.0
    • cpp-binding
    • None

    Description

      Proton throws a conversion_error if a null value is decoded into a proton::scalar, in particular when decoding application properties that contain null values. nulls should be legal anywhere that any other scalar is.

      Attachments

        Activity

          People

            aconway Alan Conway
            aconway Alan Conway
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: