PROTON-1882: [cpp] cannot send message properties with null values

The is_scalar() function was returning false for NULL_TYPE values, so extracting
a null into a proton::scalar threw a conversion_error. Fixed so NULL is now
considered a scalar type.

Also added additional tests for null values, and fixed some missing support for
the C++11 nullptr.