cpp/include/proton/internal/type_traits.hpp
@@ -93,6 +93,10 @@ template <type_id ID, class T> struct type_id_constant {
 /// @name Metafunction returning AMQP type for scalar C++ types.
 /// @{
 template <class T> struct type_id_of;
+template<> struct type_id_of<null> : public type_id_constant<NULL_TYPE, null> {};
+#if PN_CPP_HAS_NULLPTR
+template<> struct type_id_of<decltype(nullptr)> : public type_id_constant<NULL_TYPE, null> {};
+#endif
 template<> struct type_id_of<bool> : public type_id_constant<BOOLEAN, bool> {};
 template<> struct type_id_of<uint8_t> : public type_id_constant<UBYTE, uint8_t> {};
 template<> struct type_id_of<int8_t> : public type_id_constant<BYTE, int8_t> {};
@@ -113,9 +117,6 @@ template<> struct type_id_of<uuid> : public type_id_constant<UUID, uuid> {};
 template<> struct type_id_of<std::string> : public type_id_constant<STRING, std::string> {};
 template<> struct type_id_of<symbol> : public type_id_constant<SYMBOL, symbol> {};
 template<> struct type_id_of<binary> : public type_id_constant<BINARY, binary> {};
-#if PN_CPP_HAS_NULLPTR
-template<> struct type_id_of<decltype(nullptr)> : public type_id_constant<NULL_TYPE, null> {};
-#endif
 /// @}
 
 /// Metafunction to test if a class has a type_id.
