cpp/src/value_test.cpp
@@ -76,23 +76,48 @@ template <class T, class U> void map_test(const U& values, const string& s) {
         ASSERT_EQUAL(s, to_string(v));
 }
 
-#if PN_CPP_HAS_CPP11
 void null_test() {
-    auto n = null();
-    proton::value nn = nullptr;
-    ASSERT_EQUAL(n, nn);
-    ASSERT_EQUAL("null", to_string(nn));
+    proton::null n;
     ASSERT_EQUAL("null", to_string(n));
-    std::vector<proton::value> nulls = {nullptr, null{}};
+
+    std::vector<proton::value> nulls(2, n);
     ASSERT_EQUAL("[null, null]", to_string(nulls));
 
-    std::vector<std::nullptr_t> nulls1 = {nullptr, nullptr};
+    std::vector<proton::null> nulls1(2, n);
     ASSERT_EQUAL("@PN_NULL[null, null]", to_string(nulls1));
 
-    std::vector<proton::value> vs = {nullptr, nulls, nulls1};
+    std::vector<proton::value> vs;
+    vs.push_back(n);
+    vs.push_back(nulls);
+    vs.push_back(nulls1);
     ASSERT_EQUAL("[null, [null, null], @PN_NULL[null, null]]", to_string(vs));
-}
+
+    std::map<proton::value, proton::value> vm;
+    vm[n] = 1;
+    vm[nulls1] = 2;
+    vm[nulls] = 3;
+    // FIXME aconway 2018-06-29: note different types compare by type-id,
+    // so NULL < ARRAY < LIST
+    ASSERT_EQUAL("{null=1, @PN_NULL[null, null]=2, [null, null]=3}", to_string(vm));
+
+    std::map<proton::scalar, proton::scalar> vm2;
+    vm2[n] = 1;                 // Different types compare by type-id, NULL is smallest
+    vm2[2] = n;
+    ASSERT_EQUAL("{null=1, 2=null}", to_string(vm2));
+
+#if PN_CPP_HAS_CPP11
+    proton::value nn = nullptr;
+    ASSERT(n == nn);            // Don't use ASSERT_EQUAL, it will try to print
+    ASSERT_EQUAL("null", to_string(nn));
+    std::vector<std::nullptr_t> nulls2 {nullptr, nullptr};
+    ASSERT_EQUAL("@PN_NULL[null, null]", to_string(nulls2));
+    std::map<proton::scalar, proton::scalar> m {{nullptr, nullptr}};
+    ASSERT_EQUAL("{null=null}", to_string(m));
+    std::map<proton::value, proton::value> m2 {{nullptr, nullptr}};
+    ASSERT_EQUAL("{null=null}", to_string(m2));
 #endif
+}
+
 }
 
 int main(int, char**) {
